force-app/main/default/objects/Test_Execution_Steps__c/Test_Execution_Steps__c.object-meta.xml
<CustomObject>
    <label>Test Execution Steps</label>
    <nameField>
        <label>Execution Steps Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Execution Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>