force-app/main/default/objects/Test_Execution_Steps__c/fields/Input_Data__c.field-meta.xml
<CustomField>
    <fullName>Input_Data__c</fullName>
    <label>Input Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>