force-app/main/default/objects/Test_Execution_Steps__c/fields/Step_Order__c.field-meta.xml
<CustomField>
    <fullName>Step_Order__c</fullName>
    <label>Step Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>