force-app/main/default/objects/Test_Execution_Steps__c/fields/Test_Execution_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Execution_Name__c</fullName>
    <label>Test Execution Name</label>
    <referenceTo>Test_Execution__c</referenceTo>
    <relationshipLabel>Test Execution Steps</relationshipLabel>
    <relationshipName>Test_Execution_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>